@@ -1,22 +1,22 @@
 import sys
 import os.path
-from AppKit.NibClassBuilder import AutoBaseClass,  extractClasses
-
-extractClasses('MainMenu.nib')
+import AppKit
+from AppKit import NibClassBuilder
+from AppKit.NibClassBuilder import AutoBaseClass
 
 sys.path.insert(0, os.path.join(sys.path[0], "pyobjc"))
 
 import objc
 import AppKit
 
-class PyModel (AutoBaseClass, AppKit.NSTableDataSource):
+NibClassBuilder.extractClasses("MainMenu")
+class PyModel (AutoBaseClass, AppKit.NSTableDataSource, AppKit.NSTableViewDelegate):
     __slots__  = ('rowcount')
 
     def init(self):
         print "PyModel instance initialized"
         self.rowcount = 10
         return self
-
 
     def numberOfRowsInTableView_(self, aTableView):
         print "numerOfRowsInTableView: called"
@@ -28,5 +28,9 @@ class PyModel (AutoBaseClass, AppKit.NSTableDataSource):
 
         print "tableView:objectValueForTableColumn:row: called"
         return "{%s, %d}"%(aTableColumn.identifier(), rowIndex)
+    
+    def tableView_shouldSelectRow_(self, aTableView, aRow):
+        print "tableView:shouldSelectRow:", aRow
+        return 1
 
 sys.exit(AppKit.NSApplicationMain(sys.argv))
